UI performance optimization

--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -9,11 +9,20 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
     href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Outfit:wght@500;600;700&display=swap"
-    rel="stylesheet">
+    rel="stylesheet" media="print" onload="this.media='all'">
+  <noscript>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Outfit:wght@500;600;700&display=swap"
+      rel="stylesheet">
+  </noscript>
   <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
   <meta name="theme-color" content="#050505" />
-  <meta name="description" content="Grip - The financial diet that sticks." />
-  <title>Grip - Financial Intelligence</title>
+  <meta name="description" content="Grip is your private financial intelligence engine. Track expenses, forecast budgets, and manage wealth with AI-driven insights." />
+  <meta name="robots" content="index, follow" />
+  <meta property="og:title" content="Grip - Financial Intelligence" />
+  <meta property="og:description" content="The privacy-first financial diet that sticks." />
+  <meta property="og:type" content="website" />
+  <title>Grip - Private Financial Intelligence Engine</title>
 </head>
 
 <body>
