feat: Scaffold new frontend application with core pages and a comprehensive wealth management module.

--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -3,7 +3,8 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="apple-touch-icon" href="/pwa-192x192.png" />
+  <link rel="icon" type="image/svg+xml" href="/logo.svg" />
+  <link rel="apple-touch-icon" href="/logo.svg" />
   <link rel="manifest" href="/manifest.json" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -17,8 +18,10 @@
   </noscript>
   <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
   <meta name="theme-color" content="#050505" />
-  <meta name="description" content="Grip is your private financial intelligence engine. Track expenses, forecast budgets, and manage wealth with AI-driven insights." />
+  <meta name="description"
+    content="Grip is your private financial intelligence engine. Track expenses, forecast budgets, and manage wealth with AI-driven insights." />
   <meta name="robots" content="index, follow" />
+  <meta name="google-site-verification" content="0fnp3tbuHDiEG-fQZqWlO-CC8tCcDaMh39tVRVpP07s" />
   <meta property="og:title" content="Grip - Financial Intelligence" />
   <meta property="og:description" content="The privacy-first financial diet that sticks." />
   <meta property="og:type" content="website" />
