feat(auth/infra): implement Google Login and Vercel Email Relay
- Added "Login with Google" (Approach B) to bypass SMTP/OTP hurdles and provide seamless onboarding.
- Created `EmailService` microservice for Vercel (Approach Relay) to bypass Port 587/465 blocks on cloud hosts.
- Integrated AI-powered witty onboarding emails triggered on user initiation.
- Re-enabled Groq Llama-3 as a robust fallback for the primary Intelligence Engine.
- Updated Privacy Policy and Terms of Service for transparency regarding AI usage and non-commercial status.
- Refined README with a dedicated "Environment & Security Configuration" guide for cloud portability.

--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -26,6 +26,7 @@
   <meta property="og:description" content="The privacy-first financial diet that sticks." />
   <meta property="og:type" content="website" />
   <title>Grip - Private Financial Intelligence Engine</title>
+  <script src="https://accounts.google.com/gsi/client" async defer></script>
 </head>
 
 <body>
