--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -22,6 +22,7 @@
     content="Grip is your private financial intelligence engine. Track expenses, forecast budgets, and manage wealth with AI-driven insights." />
   <meta name="robots" content="index, follow" />
   <meta name="google-site-verification" content="0fnp3tbuHDiEG-fQZqWlO-CC8tCcDaMh39tVRVpP07s" />
+  <meta name="google-site-verification" content="hpWnQYZ31QXMqmA769wBtOJGoWoH1P8XmExuLL-Y134" />
   <meta property="og:title" content="Grip - Financial Intelligence" />
   <meta property="og:description" content="The privacy-first financial diet that sticks." />
   <meta property="og:type" content="website" />
