--- a/Backend/static/privacy.html
+++ b/Backend/static/privacy.html
@@ -37,6 +37,14 @@
             margin: 20px 0;
         }
 
+        ul {
+            padding-left: 20px;
+        }
+
+        li {
+            margin-bottom: 8px;
+        }
+
         a {
             color: #0284c7;
             text-decoration: none;
@@ -50,34 +58,57 @@
 
 <body>
     <h1>Privacy Policy</h1>
-    <p>Last Updated: February 2026</p>
+    <p>Last Updated: February 25, 2026 (v1.0.1)</p>
 
     <div class="trusted-box">
-        <strong>Trust & Transparency:</strong> Grip Intelligence does not sell your data. This is a non-commercial,
-        personal tool; we do not use your personal information to train public AI models. All data processing is
-        strictly for providing personal financial insights to you.
+        <strong>Trust & Transparency:</strong> Grip Intelligence operates on a foundation of absolute transparency.
+        We do not sell, rent, or trade your personal data. This is a non-commercial, personal tool;
+        we do not use your personal information to train public AI models.
     </div>
 
-    <h2>01. Data Collection</h2>
+    <h2>01. Data Collection & Usage</h2>
     <p>We collect information necessary to provide financial analytics, including your email address for account
         identification and transaction data extracted from bank-related notifications.</p>
 
     <h2>02. Google User Data (Restricted Scope)</h2>
-    <p>Grip accesses your Gmail account using a Restricted Scope (gmail.readonly). We strictly search for and process
-        only bank transaction notifications and financial statements.</p>
-    <p><strong>Limited Use:</strong> Our use of information received from Google APIs adheres to the <a
+    <p>Grip accesses your Gmail account using OAuth 2.0 Restricted Scopes (gmail.readonly). We strictly search for and
+        process
+        only bank transaction notifications, credit card alerts, and financial statements.</p>
+
+    <p><strong>How We Use This Data:</strong></p>
+    <ul>
+        <li>Automatically populate your financial dashboard with transaction details.</li>
+        <li>Detect and categorize your spending across various bank accounts and cards.</li>
+        <li>Extract investment confirmations to update your portfolio snapshots.</li>
+    </ul>
+
+    <p><strong>AI Role (Data Extraction Only):</strong> We use Large Language Models (LLMs) strictly for the structural
+        extraction of transaction data from raw email text. <u>AI does not handle your financial calculations or money
+            management logic.</u></p>
+
+    <p><strong>Restricted Scope Compliance:</strong> Our use and transfer of information received from Google APIs to
+        any other app will adhere to the <a
             href="https://developers.google.com/terms/api-services-user-data-policy">Google API Services User Data
-            Policy</a>, including the Limited Use requirements. We do not share this data with third-party marketing
-        tools or advertisers.</p>
+            Policy</a>, including the Limited Use requirements.</p>
 
-    <h2>03. Data Governance</h2>
-    <p>Personal Identifiable Information (PII) is isolated. Our internal Intelligence Engine processes your data in a
-        secure, containerized environment tied only to your unique ID.</p>
+    <h2>03. Financial Intelligence Engine</h2>
+    <p>Our logic-based intelligence engine performs rigorous financial calculations to provide variance analysis and
+        "Safe to Spend" metrics.
+        Safe-to-Spend is a deterministic mathematical calculation based on your current balance minus unpaid bills and
+        projected recurring commitments.
+        It includes a safety buffer based on your actual 30-day discretionary spending averages.</p>
 
-    <h2>04. Security</h2>
-    <p>We use TLS encryption for data in transit and AES-256 encryption at rest for sensitive financial markers.</p>
+    <h2>04. Privacy Sanitization & Governance</h2>
+    <p>All processing is containerized and scoped strictly to your unique account ID. We use local regex-based
+        sanitization tools to mask
+        highly sensitive PII (like full account numbers or UPI IDs) <u>before</u> any extraction or analysis occurs.</p>
 
-    <h2>05. Contact</h2>
+    <h2>05. Security</h2>
+    <p>We use TLS encryption for data in transit and industry-standard AES-256 encryption at rest for sensitive
+        financial markers.
+        Passwords utilize salted cryptographic hashing.</p>
+
+    <h2>06. Contact</h2>
     <p>For privacy inquiries, contact us at amitkr.dey1998@gmail.com</p>
 </body>
 
