--- a/Backend/static/terms.html
+++ b/Backend/static/terms.html
@@ -42,7 +42,7 @@
 
 <body>
     <h1>Terms of Service</h1>
-    <p>Last Updated: February 2026</p>
+    <p>Last Updated: February 25, 2026 (v1.0.1)</p>
 
     <div class="alert">
         <strong>Important:</strong> Grip is an analytics tool, not a financial advisor. Use this data for informational
